--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,6 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "quotes": ["error", "double"],
-    "implicit-arrow-linebreak": ["error", "below"]
+    "quotes": ["error", "double"]
   }
 }
