--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "validator": "^13.9.0"
   }
 }
